feat: Adicionando tratamento de exceção de UUID invalido
